refine training logics and move control to javascript side

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pi"
   ],
   "dependencies": {
+    "lodash": "^4.13.1",
     "logule": "^2.0.1",
     "nats": "^0.2.9",
     "node-humix-sense": "^1.0.0"
@@ -27,5 +28,7 @@
     "nan": "^2.1.0",
     "node-gyp": "^3.2.1"
   },
-  "engines" : { "node" : ">=4.2" }
+  "engines": {
+    "node": ">=4.2"
+  }
 }
